<resources>
    <string name="app_name">CommonLibrary</string>
    <string name="down_logo">下载logo</string>
    <string name="string_back_previous">点击返回上一层</string>
    <string name="string_title">标题</string>

    <string name="showToast">显示结果</string>
    <string name="loadPatch">加载补丁</string>
    <string name="loadLibrary">加载so库</string>
    <string name="userDownload">手动下载补丁包</string>
    <string name="checkUpgrade">检查更新</string>
    <string name="userPatch">手动合成补丁</string>

    <string name="string_confirm">确&#160;认</string>
    <string name="stringLauch">登&#160;录</string>
    <string name="string_cancel">取&#160;消</string>

    <string name="string_cancel_txt">取&#160;&#160;&#160;消</string>
</resources>
