<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:gravity="center_horizontal"
        android:paddingBottom="10dp"
        android:orientation="vertical"
        tools:context=".my.activity.MyBuglyActivity">

    <TextView
            android:text="1111111当前版本:"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvCurrentVersion"/>

    <Button
            android:id="@+id/btnShowToast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/showToast"
            android:layout_marginTop="14dp"/>

    <Button
            android:id="@+id/btnLoadPatch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loadPatch"
    />
    <Button
            android:id="@+id/btnLoadLibrary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loadLibrary"
    />
    <Button
            android:id="@+id/btnDownloadPatch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userDownload"
    />
    <Button
            android:id="@+id/btnPatchDownloaded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userPatch"
    />
    <Button
            android:id="@+id/btnCheckUpgrade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkUpgrade"
    />
    <Button
            android:id="@+id/btnKillSelf"
            android:text="退出程序"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

<!--    <TextView
        android:text="测试"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvTest"/>-->

</LinearLayout>
